add advanced tunning for an job of spark ML training